--- a/MainWindow.axaml
+++ b/MainWindow.axaml
@@ -1,9 +1,66 @@
 <Window xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
+        xmlns:dg="clr-namespace:Avalonia.Controls;assembly=Avalonia.Controls.DataGrid"
         x:Class="TornPropertyManager.MainWindow"
-        Title="TornPropertyManager">
-    Welcome to Avalonia!
+        Width="800" Height="450"
+        Title="Torn Property Manager"
+        x:CompileBindings="False">
+
+  <DockPanel Margin="10">
+
+    <!-- Header -->
+    <StackPanel DockPanel.Dock="Top"
+                Orientation="Horizontal"
+                HorizontalAlignment="Stretch"
+                Margin="0,0,0,10">
+
+      <TextBlock Text="Your Properties"
+                 FontSize="20"
+                 VerticalAlignment="Center"/>
+
+      <StackPanel Orientation="Horizontal"
+                  HorizontalAlignment="Right"
+                  Margin="10,0,0,0">
+        <Button Content="Reset API Key"
+                Command="{Binding ResetApiKeyCommand}"/>
+      </StackPanel>
+
+    </StackPanel>
+
+    <!-- Status -->
+    <TextBlock DockPanel.Dock="Bottom"
+               Text="{Binding StatusMessage}"
+               Margin="0,10,0,0"/>
+
+    <!-- Properties Grid -->
+    <dg:DataGrid ItemsSource="{Binding Properties}"
+                 AutoGenerateColumns="False"
+                 IsReadOnly="True">
+
+      <dg:DataGrid.Columns>
+
+        <dg:DataGridTextColumn Header="ID"
+                               Binding="{Binding PropertyId}"
+                               Width="80" />
+
+        <dg:DataGridTextColumn Header="Name"
+                               Binding="{Binding Name}"
+                               Width="*" />
+
+        <dg:DataGridTextColumn Header="Type"
+                               Binding="{Binding Type}"
+                               Width="150" />
+
+        <dg:DataGridTextColumn Header="Status"
+                               Binding="{Binding Status}"
+                               Width="150" />
+
+        <dg:DataGridCheckBoxColumn Header="Rented"
+                                   Binding="{Binding IsRented}"
+                                   Width="80" />
+
+      </dg:DataGrid.Columns>
+    </dg:DataGrid>
+
+  </DockPanel>
 </Window>
